--- a/404.html
+++ b/404.html
@@ -66,11 +66,11 @@
 			})();
 		</script>
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.O_01o_EU.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.ao-Hdl0F.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.hZnJVekC.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.CHt35-2K.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/runtime.BUNW3LXa.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.x0V0-Ck4.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.De5Hv_ac.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.kMPPxUav.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.-Vo8L4u_.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/svelte-component.Bq0-L3XE.js">
 	</head>
@@ -79,15 +79,15 @@
 		<div class="flex min-h-dvh flex-col">
 			<script>
 				{
-					__sveltekit_gh70f = {
+					__sveltekit_148s7o6 = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.O_01o_EU.js"),
-						import("/_app/immutable/entry/app.De5Hv_ac.js")
+						import("/_app/immutable/entry/start.hZnJVekC.js"),
+						import("/_app/immutable/entry/app.kMPPxUav.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
