--- a/404.html
+++ b/404.html
@@ -66,28 +66,28 @@
 			})();
 		</script>
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.hZnJVekC.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.CHt35-2K.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/runtime.BUNW3LXa.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/index.x0V0-Ck4.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.kMPPxUav.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.-Vo8L4u_.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/svelte-component.Bq0-L3XE.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.Bm5VjP-z.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.BUlxLGNr.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/runtime.DoiWeK4U.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index.DXcyNzmq.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.BGDUWno0.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.B4QUAs2J.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/svelte-component.CL0J2HcA.js">
 	</head>
 
 	<body>
 		<div class="flex min-h-dvh flex-col">
 			<script>
 				{
-					__sveltekit_148s7o6 = {
+					__sveltekit_1eerw1h = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.hZnJVekC.js"),
-						import("/_app/immutable/entry/app.kMPPxUav.js")
+						import("/_app/immutable/entry/start.Bm5VjP-z.js"),
+						import("/_app/immutable/entry/app.BGDUWno0.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
