--- a/404.html
+++ b/404.html
@@ -66,11 +66,11 @@
 			})();
 		</script>
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.Bm5VjP-z.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.BUlxLGNr.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.CTq2gXgI.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.D6f4BOFT.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/runtime.DoiWeK4U.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.DXcyNzmq.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.BGDUWno0.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.XHLSs0FW.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.B4QUAs2J.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/svelte-component.CL0J2HcA.js">
 	</head>
@@ -79,15 +79,15 @@
 		<div class="flex min-h-dvh flex-col">
 			<script>
 				{
-					__sveltekit_1eerw1h = {
+					__sveltekit_1x8qady = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.Bm5VjP-z.js"),
-						import("/_app/immutable/entry/app.BGDUWno0.js")
+						import("/_app/immutable/entry/start.CTq2gXgI.js"),
+						import("/_app/immutable/entry/app.XHLSs0FW.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
