--- a/404.html
+++ b/404.html
@@ -66,11 +66,11 @@
 			})();
 		</script>
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.BHOueWDV.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.CTGW3A3n.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.DgnVLQkl.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.7ENx5zS3.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/runtime.DoiWeK4U.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.DXcyNzmq.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.D1eRuCPw.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.Bdfy2Y0X.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.B4QUAs2J.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/svelte-component.CL0J2HcA.js">
 	</head>
@@ -79,15 +79,15 @@
 		<div class="flex min-h-dvh flex-col">
 			<script>
 				{
-					__sveltekit_1f1xxrq = {
+					__sveltekit_mdpz7c = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.BHOueWDV.js"),
-						import("/_app/immutable/entry/app.D1eRuCPw.js")
+						import("/_app/immutable/entry/start.DgnVLQkl.js"),
+						import("/_app/immutable/entry/app.Bdfy2Y0X.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
