--- a/404.html
+++ b/404.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" class="h-full">
+<html lang="en" prefix="og: http://ogp.me/ns#">
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -66,28 +66,28 @@
 			})();
 		</script>
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.DgnVLQkl.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.7ENx5zS3.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/runtime.DoiWeK4U.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/index.DXcyNzmq.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.Bdfy2Y0X.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.B4QUAs2J.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/svelte-component.CL0J2HcA.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.BumkyxHi.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.CZn7NJEq.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/runtime.DdpueyaV.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index.0xrOS0H1.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.Dn_PDDze.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.9W-u9b8p.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/svelte-component.D07t8YwL.js">
 	</head>
 
 	<body>
 		<div class="flex min-h-dvh flex-col">
 			<script>
 				{
-					__sveltekit_mdpz7c = {
+					__sveltekit_1ysrut6 = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.DgnVLQkl.js"),
-						import("/_app/immutable/entry/app.Bdfy2Y0X.js")
+						import("/_app/immutable/entry/start.BumkyxHi.js"),
+						import("/_app/immutable/entry/app.Dn_PDDze.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
