--- a/404.html
+++ b/404.html
@@ -66,28 +66,28 @@
 			})();
 		</script>
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.BumkyxHi.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.CZn7NJEq.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/runtime.DdpueyaV.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/index.0xrOS0H1.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.Dn_PDDze.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.9W-u9b8p.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/svelte-component.D07t8YwL.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.DbZ5aIXo.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.BU6rJIrh.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/utils.DoWZESi3.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index.Bj_6Sl8i.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.Ds6jZyFM.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.BH04v4EY.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/svelte-component.Bk8GYn7v.js">
 	</head>
 
 	<body>
 		<div class="flex min-h-dvh flex-col">
 			<script>
 				{
-					__sveltekit_1ysrut6 = {
+					__sveltekit_1mm8qu6 = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.BumkyxHi.js"),
-						import("/_app/immutable/entry/app.Dn_PDDze.js")
+						import("/_app/immutable/entry/start.DbZ5aIXo.js"),
+						import("/_app/immutable/entry/app.Ds6jZyFM.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
