--- a/404.html
+++ b/404.html
@@ -1,98 +1,113 @@
 <!doctype html>
 <html lang="en" prefix="og: http://ogp.me/ns#">
-	<head>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-		<link rel="icon" type="image/png" href="/favicon-48x48.png" sizes="48x48" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<link rel="shortcut icon" href="/favicon.ico" />
-		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-		<meta name="apple-mobile-web-app-title" content="NGOK" />
-		<link rel="manifest" href="/site.webmanifest" />
+<head>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-		<meta name="apple-mobile-web-app-capable" content="yes" />
-		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+	<link rel="icon" type="image/png" href="/favicon-48x48.png" sizes="48x48" />
+	<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+	<link rel="shortcut icon" href="/favicon.ico" />
+	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+	<meta name="apple-mobile-web-app-title" content="NGOK" />
+	<link rel="manifest" href="/site.webmanifest" />
 
-		<title>NGOK</title>
-		<meta name="description" content="NGOK Better schedule" />
-		<meta
-			name="keywords"
-			content="ma, cyou, macyou, mapagmataas, ma-cyou, ma.cyou, ngok, better, schedule, ngok.ma.cyou"
-		/>
-		<meta name="author" content="Mapagmataas" />
-		<meta name="robots" content="index, follow" />
+	<meta name="apple-mobile-web-app-capable" content="yes" />
+	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
-		<link rel="canonical" href="https://ngok.ma.cyou/" />
+	<title>NGOK</title>
+	<meta name="description" content="NGOK Better schedule" />
+	<meta name="keywords"
+		content="ma, cyou, macyou, mapagmataas, ma-cyou, ma.cyou, ngok, better, schedule, ngok.ma.cyou" />
+	<meta name="author" content="Mapagmataas" />
+	<meta name="robots" content="index, follow" />
 
-		<meta property="og:url" content="https://ngok.ma.cyou/" />
-		<meta property="og:type" content="website" />
-		<meta property="og:title" content="NGOK" />
-		<meta property="og:description" content="NGOK Better schedule" />
-		<meta
-			property="og:image"
-			content="https://dynamic-og-image-generator.vercel.app/api/generate?title=NGOK+Better+schedule&author=Mapagmataas&websiteUrl=https%3A%2F%2Fma.cyou&avatar=https%3A%2F%2Fgithub.com%2Fma-cyou.png&theme=default"
-		/>
+	<link rel="canonical" href="https://ngok.ma.cyou/" />
 
-		<meta name="twitter:card" content="summary_large_image" />
-		<meta property="twitter:domain" content="ngok.ma.cyou" />
-		<meta property="twitter:url" content="https://ngok.ma.cyou/" />
-		<meta name="twitter:title" content="NGOK" />
-		<meta name="twitter:description" content="NGOK Better schedule" />
-		<meta name="twitter:alt" content="Twitter Image" />
-		<meta
-			name="twitter:image"
-			content="https://dynamic-og-image-generator.vercel.app/api/generate?title=NGOK+Better+schedule&author=Mapagmataas&websiteUrl=https%3A%2F%2Fma.cyou&avatar=https%3A%2F%2Fgithub.com%2Fma-cyou.png&theme=default"
-		/>
+	<meta property="og:url" content="https://ngok.ma.cyou/" />
+	<meta property="og:type" content="website" />
+	<meta property="og:title" content="NGOK" />
+	<meta property="og:description" content="NGOK Better schedule" />
+	<meta property="og:image"
+		content="https://dynamic-og-image-generator.vercel.app/api/generate?title=NGOK+Better+schedule&author=Mapagmataas&websiteUrl=https%3A%2F%2Fma.cyou&avatar=https%3A%2F%2Fgithub.com%2Fma-cyou.png&theme=default" />
 
-		<script async>
-			(function () {
-				const getCookie = (name) =>
-					document.cookie
-						.split('; ')
-						.find((row) => row.startsWith(name))
-						?.split('=')[1];
+	<meta name="twitter:card" content="summary_large_image" />
+	<meta property="twitter:domain" content="ngok.ma.cyou" />
+	<meta property="twitter:url" content="https://ngok.ma.cyou/" />
+	<meta name="twitter:title" content="NGOK" />
+	<meta name="twitter:description" content="NGOK Better schedule" />
+	<meta name="twitter:alt" content="Twitter Image" />
+	<meta name="twitter:image"
+		content="https://dynamic-og-image-generator.vercel.app/api/generate?title=NGOK+Better+schedule&author=Mapagmataas&websiteUrl=https%3A%2F%2Fma.cyou&avatar=https%3A%2F%2Fgithub.com%2Fma-cyou.png&theme=default" />
 
-				const savedTheme = getCookie('theme');
-				const prefersDarkScheme = window.matchMedia('(prefers-color-scheme: dark)').matches;
-				document.documentElement.classList.toggle(
-					'dark',
-					savedTheme ? savedTheme === 'dark' : prefersDarkScheme
-				);
+	<script async>
+		(function () {
+			const getCookie = (name) =>
+				document.cookie
+					.split('; ')
+					.find((row) => row.startsWith(name))
+					?.split('=')[1];
 
-				const savedLanguage = getCookie('language');
-				const browserLanguage = navigator.language.startsWith('ru') ? 'ru' : 'en';
-				document.documentElement.setAttribute('lang', savedLanguage || browserLanguage);
-			})();
-		</script>
-		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.DbZ5aIXo.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.BU6rJIrh.js">
+			const savedTheme = getCookie('theme');
+			const prefersDarkScheme = window.matchMedia('(prefers-color-scheme: dark)').matches;
+			document.documentElement.classList.toggle(
+				'dark',
+				savedTheme ? savedTheme === 'dark' : prefersDarkScheme
+			);
+
+			const savedLanguage = getCookie('language');
+			const browserLanguage = navigator.language.startsWith('ru') ? 'ru' : 'en';
+			document.documentElement.setAttribute('lang', savedLanguage || browserLanguage);
+		})();
+	</script>
+	
+		<link rel="modulepreload" href="/_app/immutable/entry/start.Bi3_9zq-.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.DG6K3dmk.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/utils.DoWZESi3.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.Bj_6Sl8i.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.Ds6jZyFM.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.D01Pj5pd.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.BH04v4EY.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/svelte-component.Bk8GYn7v.js">
-	</head>
+</head>
 
-	<body>
-		<div class="flex min-h-dvh flex-col">
+<body>
+	<div class="flex min-h-dvh flex-col">
 			<script>
 				{
-					__sveltekit_1mm8qu6 = {
+					__sveltekit_1i5bh15 = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.DbZ5aIXo.js"),
-						import("/_app/immutable/entry/app.Ds6jZyFM.js")
+						import("/_app/immutable/entry/start.Bi3_9zq-.js"),
+						import("/_app/immutable/entry/app.D01Pj5pd.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
 				}
 			</script>
 		</div>
-	</body>
+	<script type="text/javascript">
+		(function (m, e, t, r, i, k, a) {
+			m[i] = m[i] || function () { (m[i].a = m[i].a || []).push(arguments) };
+			m[i].l = 1 * new Date();
+			for (var j = 0; j < document.scripts.length; j++) { if (document.scripts[j].src === r) { return; } }
+			k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
+		})
+			(window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+		ym(98760335, "init", {
+			clickmap: true,
+			trackLinks: true,
+			accurateTrackBounce: true,
+			webvisor: true
+		});
+	</script>
+	<noscript>
+		<div><img src="https://mc.yandex.ru/watch/98760335" style="position:absolute; left:-9999px;" alt="" /></div>
+	</noscript>
+</body>
+
 </html>
