Open Graph image update

--- a/src/app.html
+++ b/src/app.html
@@ -29,7 +29,7 @@
 	<meta property="og:title" content="NGOK" />
 	<meta property="og:description" content="NGOK Better schedule" />
 	<meta property="og:image"
-		content="https://dynamic-og-image-generator.vercel.app/api/generate?title=NGOK+Better+schedule&author=Mapagmataas&websiteUrl=https%3A%2F%2Fma.cyou&avatar=https%3A%2F%2Fgithub.com%2Fma-cyou.png&theme=default" />
+		content="https://dynamic-og-image-generator.vercel.app/api/generate?title=NGOK+Better+Schedule+https%3A%2F%2Fngok.ma.cyou&author=Mapagmataas&websiteUrl=https%3A%2F%2Fma.cyou%23socials&avatar=https%3A%2F%2Fma.cyou%2Fandroid-chrome-512x512-light.png&theme=default" />
 
 	<meta name="twitter:card" content="summary_large_image" />
 	<meta property="twitter:domain" content="ngok.ma.cyou" />
@@ -38,7 +38,7 @@
 	<meta name="twitter:description" content="NGOK Better schedule" />
 	<meta name="twitter:alt" content="Twitter Image" />
 	<meta name="twitter:image"
-		content="https://dynamic-og-image-generator.vercel.app/api/generate?title=NGOK+Better+schedule&author=Mapagmataas&websiteUrl=https%3A%2F%2Fma.cyou&avatar=https%3A%2F%2Fgithub.com%2Fma-cyou.png&theme=default" />
+		content="https://dynamic-og-image-generator.vercel.app/api/generate?title=NGOK+Better+Schedule+https%3A%2F%2Fngok.ma.cyou&author=Mapagmataas&websiteUrl=https%3A%2F%2Fma.cyou%23socials&avatar=https%3A%2F%2Fma.cyou%2Fandroid-chrome-512x512-light.png&theme=default" />
 
 	<script async>
 		(function () {
