--- a/404.html
+++ b/404.html
@@ -29,7 +29,7 @@
 	<meta property="og:title" content="NGOK" />
 	<meta property="og:description" content="NGOK Better schedule" />
 	<meta property="og:image"
-		content="https://dynamic-og-image-generator.vercel.app/api/generate?title=NGOK+Better+schedule&author=Mapagmataas&websiteUrl=https%3A%2F%2Fma.cyou&avatar=https%3A%2F%2Fgithub.com%2Fma-cyou.png&theme=default" />
+		content="https://dynamic-og-image-generator.vercel.app/api/generate?title=NGOK+Better+Schedule+https%3A%2F%2Fngok.ma.cyou&author=Mapagmataas&websiteUrl=https%3A%2F%2Fma.cyou%23socials&avatar=https%3A%2F%2Fma.cyou%2Fandroid-chrome-512x512-light.png&theme=default" />
 
 	<meta name="twitter:card" content="summary_large_image" />
 	<meta property="twitter:domain" content="ngok.ma.cyou" />
@@ -38,7 +38,7 @@
 	<meta name="twitter:description" content="NGOK Better schedule" />
 	<meta name="twitter:alt" content="Twitter Image" />
 	<meta name="twitter:image"
-		content="https://dynamic-og-image-generator.vercel.app/api/generate?title=NGOK+Better+schedule&author=Mapagmataas&websiteUrl=https%3A%2F%2Fma.cyou&avatar=https%3A%2F%2Fgithub.com%2Fma-cyou.png&theme=default" />
+		content="https://dynamic-og-image-generator.vercel.app/api/generate?title=NGOK+Better+Schedule+https%3A%2F%2Fngok.ma.cyou&author=Mapagmataas&websiteUrl=https%3A%2F%2Fma.cyou%23socials&avatar=https%3A%2F%2Fma.cyou%2Fandroid-chrome-512x512-light.png&theme=default" />
 
 	<script async>
 		(function () {
@@ -61,11 +61,11 @@
 		})();
 	</script>
 	
-		<link rel="modulepreload" href="/_app/immutable/entry/start.Bi3_9zq-.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.DG6K3dmk.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.DeW2D_8x.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.CJ4JgxGr.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/utils.DoWZESi3.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.Bj_6Sl8i.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.D01Pj5pd.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.DlI-TRHX.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.BH04v4EY.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/svelte-component.Bk8GYn7v.js">
 </head>
@@ -74,15 +74,15 @@
 	<div class="flex min-h-dvh flex-col">
 			<script>
 				{
-					__sveltekit_1i5bh15 = {
+					__sveltekit_104rixf = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.Bi3_9zq-.js"),
-						import("/_app/immutable/entry/app.D01Pj5pd.js")
+						import("/_app/immutable/entry/start.DeW2D_8x.js"),
+						import("/_app/immutable/entry/app.DlI-TRHX.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
