--- a/src/app.html
+++ b/src/app.html
@@ -18,7 +18,7 @@
 	<title>NGOK</title>
 	<meta name="description" content="NGOK Better schedule" />
 	<meta name="keywords"
-		content="ma, cyou, macyou, mapagmataas, ma-cyou, ma.cyou, ngok, better, schedule, ngok.ma.cyou" />
+		content="ma, cyou, macyou, mapagmataas, ma-cyou, ma.cyou, ngok. нгок, better, schedule, рассписание, НГОК, Новоосибирский Государственный Открытый Колледж, занятия, ngok.ma.cyou" />
 	<meta name="author" content="Mapagmataas" />
 	<meta name="robots" content="index, follow" />
 
