--- a/404.html
+++ b/404.html
@@ -18,7 +18,7 @@
 	<title>NGOK</title>
 	<meta name="description" content="NGOK Better schedule" />
 	<meta name="keywords"
-		content="ma, cyou, macyou, mapagmataas, ma-cyou, ma.cyou, ngok, better, schedule, ngok.ma.cyou" />
+		content="ma, cyou, macyou, mapagmataas, ma-cyou, ma.cyou, ngok. нгок, better, schedule, рассписание, НГОК, Новоосибирский Государственный Открытый Колледж, занятия, ngok.ma.cyou" />
 	<meta name="author" content="Mapagmataas" />
 	<meta name="robots" content="index, follow" />
 
@@ -61,28 +61,28 @@
 		})();
 	</script>
 	
-		<link rel="modulepreload" href="/_app/immutable/entry/start.DeW2D_8x.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.CJ4JgxGr.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/utils.DoWZESi3.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/index.Bj_6Sl8i.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.DlI-TRHX.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.BH04v4EY.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/svelte-component.Bk8GYn7v.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.tcqOs_8P.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.Bq1YwPcd.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/utils.C2xL8duy.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index.BH_AdX9V.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.CaxXC4Ki.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.BS9-zGjO.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/svelte-component.CuFOhlqd.js">
 </head>
 
 <body>
 	<div class="flex min-h-dvh flex-col">
 			<script>
 				{
-					__sveltekit_104rixf = {
+					__sveltekit_1e3na73 = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.DeW2D_8x.js"),
-						import("/_app/immutable/entry/app.DlI-TRHX.js")
+						import("/_app/immutable/entry/start.tcqOs_8P.js"),
+						import("/_app/immutable/entry/app.CaxXC4Ki.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
