--- a/src/app.html
+++ b/src/app.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
 
 	<link rel="icon" type="image/png" href="/favicon-48x48.png" sizes="48x48" />
 	<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
@@ -60,11 +60,13 @@
 			document.documentElement.setAttribute('lang', savedLanguage || browserLanguage);
 		})();
 	</script>
+
 	%sveltekit.head%
 </head>
 
-<body>
+<body data-sveltekit-preload-data="hover">
 	<div class="flex min-h-dvh flex-col">%sveltekit.body%</div>
+
 	<script type="text/javascript">
 		(function (m, e, t, r, i, k, a) {
 			m[i] = m[i] || function () { (m[i].a = m[i].a || []).push(arguments) };
