--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
 
 	<link rel="icon" type="image/png" href="/favicon-48x48.png" sizes="48x48" />
 	<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
@@ -60,35 +60,36 @@
 			document.documentElement.setAttribute('lang', savedLanguage || browserLanguage);
 		})();
 	</script>
+
 	
-		<link rel="modulepreload" href="/_app/immutable/entry/start.tcqOs_8P.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.Bq1YwPcd.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/utils.C2xL8duy.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/index.BH_AdX9V.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.CaxXC4Ki.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.BS9-zGjO.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/svelte-component.CuFOhlqd.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.BVwuhKer.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.CHYjvOUX.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/utils.D8KT0RxQ.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index.BbgpAFUk.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.CurkCQ7I.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.z-UcVESM.js">
 </head>
 
-<body>
+<body data-sveltekit-preload-data="hover">
 	<div class="flex min-h-dvh flex-col">
 			<script>
 				{
-					__sveltekit_1e3na73 = {
+					__sveltekit_mm7bir = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.tcqOs_8P.js"),
-						import("/_app/immutable/entry/app.CaxXC4Ki.js")
+						import("/_app/immutable/entry/start.BVwuhKer.js"),
+						import("/_app/immutable/entry/app.CurkCQ7I.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
 				}
 			</script>
 		</div>
+
 	<script type="text/javascript">
 		(function (m, e, t, r, i, k, a) {
 			m[i] = m[i] || function () { (m[i].a = m[i].a || []).push(arguments) };
