--- a/404.html
+++ b/404.html
@@ -62,11 +62,11 @@
 	</script>
 
 	
-		<link rel="modulepreload" href="/_app/immutable/entry/start.BVwuhKer.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.CHYjvOUX.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.BxkBSyf5.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.KxeyXpf4.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/utils.D8KT0RxQ.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.BbgpAFUk.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.CurkCQ7I.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.C3tw0QEz.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.z-UcVESM.js">
 </head>
 
@@ -74,15 +74,15 @@
 	<div class="flex min-h-dvh flex-col">
 			<script>
 				{
-					__sveltekit_mm7bir = {
+					__sveltekit_scyu9d = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.BVwuhKer.js"),
-						import("/_app/immutable/entry/app.CurkCQ7I.js")
+						import("/_app/immutable/entry/start.BxkBSyf5.js"),
+						import("/_app/immutable/entry/app.C3tw0QEz.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
