--- a/404.html
+++ b/404.html
@@ -11,6 +11,8 @@
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
 	<meta name="apple-mobile-web-app-title" content="NGOK" />
 	<link rel="manifest" href="/site.webmanifest" />
+	<meta name="theme-color" content="#ffffff" media="(prefers-color-scheme: light)" />
+	<meta name="theme-color" content="#000000" media="(prefers-color-scheme: dark)" />
 
 	<meta name="apple-mobile-web-app-capable" content="yes" />
 	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
@@ -62,11 +64,11 @@
 	</script>
 
 	
-		<link rel="modulepreload" href="/_app/immutable/entry/start.mgZ4APry.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.CgqxGroJ.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.737FMp03.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.4JKE7KMV.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/utils.D8KT0RxQ.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.BbgpAFUk.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.Dxu1iTDu.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.BEV9GcZL.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.z-UcVESM.js">
 </head>
 
@@ -74,15 +76,15 @@
 	<div class="flex min-h-dvh flex-col">
 			<script>
 				{
-					__sveltekit_1j383x1 = {
+					__sveltekit_axfud5 = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.mgZ4APry.js"),
-						import("/_app/immutable/entry/app.Dxu1iTDu.js")
+						import("/_app/immutable/entry/start.737FMp03.js"),
+						import("/_app/immutable/entry/app.BEV9GcZL.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
