--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
 	<meta name="apple-mobile-web-app-title" content="NGOK" />
 	<link rel="manifest" href="/site.webmanifest" />
+	<meta name="theme-color" content="#ffffff" media="(prefers-color-scheme: light)" />
+	<meta name="theme-color" content="#000000" media="(prefers-color-scheme: dark)" />
 
 	<meta name="apple-mobile-web-app-capable" content="yes" />
 	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
@@ -64,15 +66,15 @@
 	
 		<link href="./_app/immutable/assets/0.C-nj7oxP.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/index.CV-KWLNP.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.mgZ4APry.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.CgqxGroJ.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.737FMp03.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.4JKE7KMV.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/utils.D8KT0RxQ.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.BbgpAFUk.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.Dxu1iTDu.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.BEV9GcZL.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.z-UcVESM.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.fdSPlDWc.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.DV9Z1RES.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/popper-layer-force-mount.CPqwOfTm.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.wvTeogWp.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.B1ZoKfHT.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.Cdp4U3P_.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.CL46in_-.js">
 </head>
@@ -90,7 +92,7 @@ transform: translateX(-100%);" tabindex="-1"><!--]--><!----></span><!--]--><!--]
 			
 			<script>
 				{
-					__sveltekit_1j383x1 = {
+					__sveltekit_axfud5 = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -99,8 +101,8 @@ transform: translateX(-100%);" tabindex="-1"><!--]--><!----></span><!--]--><!--]
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.mgZ4APry.js"),
-						import("./_app/immutable/entry/app.Dxu1iTDu.js")
+						import("./_app/immutable/entry/start.737FMp03.js"),
+						import("./_app/immutable/entry/app.BEV9GcZL.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
