--- a/404.html
+++ b/404.html
@@ -6,8 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-	<link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
 	<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+	<link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
 	<link rel="shortcut icon" href="/favicon.ico" />
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
 	<meta name="apple-mobile-web-app-title" content="NGOK" />
@@ -71,11 +71,11 @@
 	</script>
 
 	
-		<link rel="modulepreload" href="/_app/immutable/entry/start.BQ5S1fhy.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.CbX5mYuG.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.CTpKGs4Q.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.CBpCjrRO.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/utils.D8KT0RxQ.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.BbgpAFUk.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.CCOCswNQ.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.BnJ4hHeq.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.z-UcVESM.js">
 </head>
 
@@ -83,15 +83,15 @@
 	<div class="flex min-h-dvh flex-col">
 			<script>
 				{
-					__sveltekit_azqz4k = {
+					__sveltekit_cxewtb = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.BQ5S1fhy.js"),
-						import("/_app/immutable/entry/app.CCOCswNQ.js")
+						import("/_app/immutable/entry/start.CTpKGs4Q.js"),
+						import("/_app/immutable/entry/app.BnJ4hHeq.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
