--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-	<link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
 	<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+	<link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
 	<link rel="shortcut icon" href="/favicon.ico" />
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
 	<meta name="apple-mobile-web-app-title" content="NGOK" />
@@ -73,15 +73,15 @@
 	
 		<link href="./_app/immutable/assets/0.C-nj7oxP.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/index.CV-KWLNP.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.BQ5S1fhy.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.CbX5mYuG.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.CTpKGs4Q.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.CBpCjrRO.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/utils.D8KT0RxQ.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.BbgpAFUk.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CCOCswNQ.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.BnJ4hHeq.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.z-UcVESM.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.B5QWUjPj.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.Z57h-R2F.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/popper-layer-force-mount.CPqwOfTm.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.DIo3sCK0.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.h98-WBzC.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.Cdp4U3P_.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.CL46in_-.js">
 </head>
@@ -99,7 +99,7 @@ transform: translateX(-100%);" tabindex="-1"><!--]--><!----></span><!--]--><!--]
 			
 			<script>
 				{
-					__sveltekit_azqz4k = {
+					__sveltekit_cxewtb = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -108,8 +108,8 @@ transform: translateX(-100%);" tabindex="-1"><!--]--><!----></span><!--]--><!--]
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.BQ5S1fhy.js"),
-						import("./_app/immutable/entry/app.CCOCswNQ.js")
+						import("./_app/immutable/entry/start.CTpKGs4Q.js"),
+						import("./_app/immutable/entry/app.BnJ4hHeq.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
