--- a/404.html
+++ b/404.html
@@ -71,11 +71,11 @@
 	</script>
 
 	
-		<link rel="modulepreload" href="/_app/immutable/entry/start.CTpKGs4Q.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.CBpCjrRO.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.17bVhkER.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.CLoWuMBv.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/utils.D8KT0RxQ.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.BbgpAFUk.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.BnJ4hHeq.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.BRJfjrNJ.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.z-UcVESM.js">
 </head>
 
@@ -83,15 +83,15 @@
 	<div class="flex min-h-dvh flex-col">
 			<script>
 				{
-					__sveltekit_cxewtb = {
+					__sveltekit_i5d08h = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.CTpKGs4Q.js"),
-						import("/_app/immutable/entry/app.BnJ4hHeq.js")
+						import("/_app/immutable/entry/start.17bVhkER.js"),
+						import("/_app/immutable/entry/app.BRJfjrNJ.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
