--- a/index.html
+++ b/index.html
@@ -20,10 +20,6 @@
 	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 	<meta name="format-detection" content="telephone=no">
 
-	<meta http-equiv="X-Content-Type-Options" content="nosniff">
-	<meta name="referrer" content="strict-origin-when-cross-origin">
-	<meta http-equiv="Permissions-Policy" content="">
-
 	<title>NGOK</title>
 	<meta name="description" content="NGOK Better schedule" />
 	<meta name="keywords"
@@ -73,15 +69,15 @@
 	
 		<link href="./_app/immutable/assets/0.C-nj7oxP.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/index.CV-KWLNP.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.17bVhkER.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.CLoWuMBv.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.DOP-GVEr.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.DkUjxMR7.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/utils.D8KT0RxQ.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.BbgpAFUk.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.BRJfjrNJ.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.Nr2lpC38.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.z-UcVESM.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.C7trDmT_.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.DmSepzuW.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/popper-layer-force-mount.CPqwOfTm.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.DGqdsjYR.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.Ct0ZU50B.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.Cdp4U3P_.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.CL46in_-.js">
 </head>
@@ -99,7 +95,7 @@ transform: translateX(-100%);" tabindex="-1"><!--]--><!----></span><!--]--><!--]
 			
 			<script>
 				{
-					__sveltekit_i5d08h = {
+					__sveltekit_ue55jp = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -108,8 +104,8 @@ transform: translateX(-100%);" tabindex="-1"><!--]--><!----></span><!--]--><!--]
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.17bVhkER.js"),
-						import("./_app/immutable/entry/app.BRJfjrNJ.js")
+						import("./_app/immutable/entry/start.DOP-GVEr.js"),
+						import("./_app/immutable/entry/app.Nr2lpC38.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
