--- a/404.html
+++ b/404.html
@@ -20,10 +20,6 @@
 	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 	<meta name="format-detection" content="telephone=no">
 
-	<meta http-equiv="X-Content-Type-Options" content="nosniff">
-	<meta name="referrer" content="strict-origin-when-cross-origin">
-	<meta http-equiv="Permissions-Policy" content="">
-
 	<title>NGOK</title>
 	<meta name="description" content="NGOK Better schedule" />
 	<meta name="keywords"
@@ -71,11 +67,11 @@
 	</script>
 
 	
-		<link rel="modulepreload" href="/_app/immutable/entry/start.17bVhkER.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.CLoWuMBv.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.DOP-GVEr.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.DkUjxMR7.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/utils.D8KT0RxQ.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.BbgpAFUk.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.BRJfjrNJ.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.Nr2lpC38.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.z-UcVESM.js">
 </head>
 
@@ -83,15 +79,15 @@
 	<div class="flex min-h-dvh flex-col">
 			<script>
 				{
-					__sveltekit_i5d08h = {
+					__sveltekit_ue55jp = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.17bVhkER.js"),
-						import("/_app/immutable/entry/app.BRJfjrNJ.js")
+						import("/_app/immutable/entry/start.DOP-GVEr.js"),
+						import("/_app/immutable/entry/app.Nr2lpC38.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
