--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 
 	<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-	<link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+	<link rel="icon" type="image/png" href="/favicon.png" />
 	<link rel="shortcut icon" href="/favicon.ico" />
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
 	<meta name="apple-mobile-web-app-title" content="NGOK" />
@@ -67,11 +67,11 @@
 	</script>
 
 	
-		<link rel="modulepreload" href="/_app/immutable/entry/start.DOP-GVEr.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.DkUjxMR7.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.BbLWbfv7.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.DQi5BVLw.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/utils.D8KT0RxQ.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.BbgpAFUk.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.Nr2lpC38.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.B3iYRIEe.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.z-UcVESM.js">
 </head>
 
@@ -79,15 +79,15 @@
 	<div class="flex min-h-dvh flex-col">
 			<script>
 				{
-					__sveltekit_ue55jp = {
+					__sveltekit_19okh04 = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.DOP-GVEr.js"),
-						import("/_app/immutable/entry/app.Nr2lpC38.js")
+						import("/_app/immutable/entry/start.BbLWbfv7.js"),
+						import("/_app/immutable/entry/app.B3iYRIEe.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
