--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 
 	<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-	<link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+	<link rel="icon" type="image/png" href="/favicon.png" />
 	<link rel="shortcut icon" href="/favicon.ico" />
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
 	<meta name="apple-mobile-web-app-title" content="NGOK" />
@@ -69,15 +69,15 @@
 	
 		<link href="./_app/immutable/assets/0.C-nj7oxP.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/index.CV-KWLNP.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.DOP-GVEr.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.DkUjxMR7.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.BbLWbfv7.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.DQi5BVLw.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/utils.D8KT0RxQ.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.BbgpAFUk.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.Nr2lpC38.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.B3iYRIEe.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.z-UcVESM.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.DmSepzuW.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.VXPIVv5R.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/popper-layer-force-mount.CPqwOfTm.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.Ct0ZU50B.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.B9tZHHgd.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.Cdp4U3P_.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.CL46in_-.js">
 </head>
@@ -95,7 +95,7 @@ transform: translateX(-100%);" tabindex="-1"><!--]--><!----></span><!--]--><!--]
 			
 			<script>
 				{
-					__sveltekit_ue55jp = {
+					__sveltekit_19okh04 = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -104,8 +104,8 @@ transform: translateX(-100%);" tabindex="-1"><!--]--><!----></span><!--]--><!--]
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.DOP-GVEr.js"),
-						import("./_app/immutable/entry/app.Nr2lpC38.js")
+						import("./_app/immutable/entry/start.BbLWbfv7.js"),
+						import("./_app/immutable/entry/app.B3iYRIEe.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
